feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -251,6 +251,12 @@
               "tip": [
                 "Target the repo-level config"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "Target the workspace-level config"
+              ]
             }
           ]
         },
@@ -283,6 +289,12 @@
               "tip": [
                 "Target the repo-level config"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "Target the workspace-level config"
+              ]
             }
           ]
         },
@@ -305,6 +317,12 @@
               "name": "--repo",
               "tip": [
                 "Target the repo-level config"
+              ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "Target the workspace-level config"
               ]
             }
           ]
@@ -329,6 +347,12 @@
               "tip": [
                 "Target the repo-level config"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "Target the workspace-level config"
+              ]
             }
           ]
         },
@@ -351,6 +375,12 @@
               "name": "--repo",
               "tip": [
                 "Target the repo-level config"
+              ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "Target the workspace-level config"
               ]
             }
           ]
@@ -736,6 +766,62 @@
           "name": "remote",
           "tip": [
             "Manage Git remotes"
+          ],
+          "next": [
+            {
+              "name": "add",
+              "tip": [
+                "U: add [OPTIONS] <REMOTE> <URL>\n",
+                "Add a Git remote"
+              ],
+              "options": [
+                {
+                  "name": "--fetch-tags",
+                  "tip": [
+                    "U: --fetch-tags <FETCH_TAGS>\n",
+                    "Configure when to fetch tags [default: included]"
+                  ],
+                  "next": [
+                    {
+                      "name": "all"
+                    },
+                    {
+                      "name": "included"
+                    },
+                    {
+                      "name": "none"
+                    }
+                  ]
+                }
+              ]
+            },
+            {
+              "name": "list",
+              "tip": [
+                "List Git remotes"
+              ]
+            },
+            {
+              "name": "remove",
+              "tip": [
+                "U: remove [OPTIONS] <REMOTE>\n",
+                "Remove a Git remote and forget its bookmarks"
+              ]
+            },
+            {
+              "name": "rename",
+              "tip": [
+                "U: rename [OPTIONS] <OLD> <NEW>\n",
+                "Rename a Git remote"
+              ]
+            },
+            {
+              "name": "set-url",
+              "tip": [
+                "U: set-url [OPTIONS] <REMOTE> <URL>\n",
+                "Set the URL of a Git remote"
+              ]
+            }
           ]
         },
         {
@@ -853,9 +939,9 @@
           ]
         },
         {
-          "name": "--update-committer-timestamp",
+          "name": "--force-rewrite",
           "tip": [
-            "Update the committer timestamp"
+            "Rewrite the commit, even if no other metadata changed"
           ]
         }
       ]
