--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -251,6 +251,12 @@
               "tip": [
                 "以仓库级别的配置为目标"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "以工作区级别的配置为目标"
+              ]
             }
           ]
         },
@@ -283,6 +289,12 @@
               "tip": [
                 "以仓库级别的配置为目标"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "以工作区级别的配置为目标"
+              ]
             }
           ]
         },
@@ -305,6 +317,12 @@
               "name": "--repo",
               "tip": [
                 "以仓库级别的配置为目标"
+              ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "以工作区级别的配置为目标"
               ]
             }
           ]
@@ -329,6 +347,12 @@
               "tip": [
                 "以仓库级别的配置为目标"
               ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "以工作区级别的配置为目标"
+              ]
             }
           ]
         },
@@ -351,6 +375,12 @@
               "name": "--repo",
               "tip": [
                 "以仓库级别的配置为目标"
+              ]
+            },
+            {
+              "name": "--workspace",
+              "tip": [
+                "以工作区级别的配置为目标"
               ]
             }
           ]
@@ -736,6 +766,62 @@
           "name": "remote",
           "tip": [
             "管理 Git 远程"
+          ],
+          "next": [
+            {
+              "name": "add",
+              "tip": [
+                "U: add [OPTIONS] <REMOTE> <URL>\n",
+                "添加一个 Git 远程仓库"
+              ],
+              "options": [
+                {
+                  "name": "--fetch-tags",
+                  "tip": [
+                    "U: --fetch-tags <FETCH_TAGS>\n",
+                    "配置何时获取标签 [默认: included]"
+                  ],
+                  "next": [
+                    {
+                      "name": "all"
+                    },
+                    {
+                      "name": "included"
+                    },
+                    {
+                      "name": "none"
+                    }
+                  ]
+                }
+              ]
+            },
+            {
+              "name": "list",
+              "tip": [
+                "列出 Git 远程仓库"
+              ]
+            },
+            {
+              "name": "remove",
+              "tip": [
+                "U: remove [OPTIONS] <REMOTE>\n",
+                "移除指定的 Git 远程仓库并忘记其书签"
+              ]
+            },
+            {
+              "name": "rename",
+              "tip": [
+                "U: rename [OPTIONS] <OLD> <NEW>\n",
+                "重命名 Git 远程仓库"
+              ]
+            },
+            {
+              "name": "set-url",
+              "tip": [
+                "U: set-url [OPTIONS] <REMOTE> <URL>\n",
+                "设置 Git 远程仓库的 URL"
+              ]
+            }
           ]
         },
         {
@@ -853,9 +939,9 @@
           ]
         },
         {
-          "name": "--update-committer-timestamp",
+          "name": "--force-rewrite",
           "tip": [
-            "更新提交者时间戳"
+            "重写提交信息，即使其他元数据没有变化"
           ]
         }
       ]
