feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -604,6 +604,39 @@
           "name": "fetch",
           "tip": [
             "Fetch from a Git remote"
+          ],
+          "options": [
+            {
+              "name": "-b",
+              "alias": [
+                "--branch"
+              ],
+              "tip": [
+                "U: -b, --branch <BRANCH>\n",
+                "Fetch only some of the branches"
+              ],
+              "next": []
+            },
+            {
+              "name": "--tracked",
+              "tip": [
+                "Fetch only tracked bookmarks"
+              ]
+            },
+            {
+              "name": "--remote",
+              "tip": [
+                "U: --remote <REMOTE>\n",
+                "The remote to fetch from (only named remotes are supported, can be repeated)"
+              ],
+              "next": 0
+            },
+            {
+              "name": "--all-remotes",
+              "tip": [
+                "Fetch from all remotes"
+              ]
+            }
           ]
         },
         {
