--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -604,6 +604,39 @@
           "name": "fetch",
           "tip": [
             "从 Git 远程获取变更"
+          ],
+          "options": [
+            {
+              "name": "-b",
+              "alias": [
+                "--branch"
+              ],
+              "tip": [
+                "U: -b, --branch <BRANCH>\n",
+                "只获取部分分支"
+              ],
+              "next": []
+            },
+            {
+              "name": "--tracked",
+              "tip": [
+                "只获取已跟踪的书签"
+              ]
+            },
+            {
+              "name": "--remote",
+              "tip": [
+                "U: --remote <REMOTE>\n",
+                "从其中获取变更的远程仓库（仅支持命名的远程仓库，可重复）"
+              ],
+              "next": 0
+            },
+            {
+              "name": "--all-remotes",
+              "tip": [
+                "从所有远程仓库获取变更"
+              ]
+            }
           ]
         },
         {
