feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -495,6 +495,44 @@
       "name": "file",
       "tip": [
         "File operations"
+      ],
+      "next": [
+        {
+          "name": "annotate",
+          "tip": [
+            "Show the source change for each line of the target file"
+          ]
+        },
+        {
+          "name": "chmod",
+          "tip": [
+            "Sets or removes the executable bit for paths in the repo"
+          ]
+        },
+        {
+          "name": "list",
+          "tip": [
+            "List files in a revision"
+          ]
+        },
+        {
+          "name": "show",
+          "tip": [
+            "Print contents of files in a revision"
+          ]
+        },
+        {
+          "name": "track",
+          "tip": [
+            "Start tracking specified paths in the working copy"
+          ]
+        },
+        {
+          "name": "untrack",
+          "tip": [
+            "Stop tracking specified paths in the working copy"
+          ]
+        }
       ]
     },
     {
@@ -543,7 +581,8 @@
             {
               "name": "--colocate",
               "tip": [
-                "Whether or not to colocate the Jujutsu repo with the git repo"
+                "Whether or not to colocate the Jujutsu repo with the git repo.\n",
+                "It is the default value, and can be omitted."
               ]
             },
             {
@@ -590,6 +629,32 @@
                     "Do not fetch any tags"
                   ]
                 }
+              ]
+            }
+          ]
+        },
+        {
+          "name": "colocation",
+          "tip": [
+            "Manage Jujutsu repository colocation with Git"
+          ],
+          "next": [
+            {
+              "name": "disable",
+              "tip": [
+                "Convert into a non-colocated Jujutsu/Git repository"
+              ]
+            },
+            {
+              "name": "enable",
+              "tip": [
+                "Convert into a colocated Jujutsu/Git repository"
+              ]
+            },
+            {
+              "name": "status",
+              "tip": [
+                "Show the current colocation status"
               ]
             }
           ]
@@ -655,7 +720,8 @@
             {
               "name": "--colocate",
               "tip": [
-                "Specifies that the `jj` repo should also be a valid `git` repo, allowing the use of both `jj` and `git` commands in the same directory"
+                "Whether or not to colocate the Jujutsu repo with the git repo.\n",
+                "It is the default value, and can be omitted."
               ]
             },
             {
