--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -495,6 +495,44 @@
       "name": "file",
       "tip": [
         "文件操作"
+      ],
+      "next": [
+        {
+          "name": "annotate",
+          "tip": [
+            "显示目标文件每一行的源文件更改"
+          ]
+        },
+        {
+          "name": "chmod",
+          "tip": [
+            "设置或移除仓库中路径的可执行位"
+          ]
+        },
+        {
+          "name": "list",
+          "tip": [
+            "列出指定修订中的文件"
+          ]
+        },
+        {
+          "name": "show",
+          "tip": [
+            "打印指定修订中的文件内容"
+          ]
+        },
+        {
+          "name": "track",
+          "tip": [
+            "开始跟踪工作副本中的指定路径"
+          ]
+        },
+        {
+          "name": "untrack",
+          "tip": [
+            "停止跟踪工作副本中的指定路径"
+          ]
+        }
       ]
     },
     {
@@ -543,7 +581,8 @@
             {
               "name": "--colocate",
               "tip": [
-                "是否 jj 代码仓库与 git 代码仓库共存"
+                "是否 jj 代码仓库与 git 代码仓库共存\n",
+                "它是默认值，可以省略"
               ]
             },
             {
@@ -590,6 +629,32 @@
                     "不获取任何标签"
                   ]
                 }
+              ]
+            }
+          ]
+        },
+        {
+          "name": "colocation",
+          "tip": [
+            "管理 Jujutsu 仓库与 Git 的共存"
+          ],
+          "next": [
+            {
+              "name": "disable",
+              "tip": [
+                "转换为非共存的 Jujutsu/Git 仓库"
+              ]
+            },
+            {
+              "name": "enable",
+              "tip": [
+                "转换为共存的 Jujutsu/Git 仓库"
+              ]
+            },
+            {
+              "name": "status",
+              "tip": [
+                "显示当前共存状态"
               ]
             }
           ]
@@ -655,7 +720,8 @@
             {
               "name": "--colocate",
               "tip": [
-                "指定 `jj` 仓库也应该是一个有效的 `git` 仓库，允许在相同目录中使用 `jj` 和 `git` 命令"
+                "是否 jj 代码仓库与 git 代码仓库共存\n",
+                "它是默认值，可以省略"
               ]
             },
             {
